--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "goober": "^2.1.0",
     "preact": "^10.5.13"
   },
   "devDependencies": {
