--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.0.0",
+    "csstype": "^3.0.10",
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
   }
