--- a/package.json
+++ b/package.json
@@ -1,11 +1,27 @@
 {
-  "name": "vite-project",
-  "version": "0.0.0",
+  "name": "site",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/oriverk/site.git"
+  },
+  "keywords": [
+    "vite",
+    "preact",
+    "typescript",
+    "goober"
+  ],
+  "author": "oriverk",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/oriverk/site/issues"
+  },
+  "homepage": "https://github.com/oriverk/site#readme",
   "dependencies": {
     "goober": "^2.1.0",
     "micromark": "^3.0.10",
@@ -16,7 +32,6 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.0.0",
-    "csstype": "^3.0.10",
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
   }
