--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "site",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint": "eslint {src,pages}/**/*",
+    "fix": "run-s fix:eslint fix:prettier",
+    "fix:md": "run-s fix:markdownlint fix:textlint",
+    "fix:eslint": "eslint --fix {src,pages}/**/*",
+    "fix:prettier": "prettier --write {src,pages}/**/*",
+    "fix:markdownlint": "markdownlint -f resume.md",
+    "fix:textlint": "textlint --fix resume.md",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -32,6 +40,25 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
+    "eslint": "^8.5.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-preact": "^1.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.0",
+    "markdownlint-cli": "^0.30.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.5.1",
+    "textlint": "^12.1.0",
+    "textlint-rule-preset-ja-spacing": "^2.2.0",
+    "textlint-rule-preset-ja-technical-writing": "^7.0.0",
+    "textlint-rule-spellcheck-tech-word": "^5.0.0",
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
   }
