--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "site",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -42,6 +42,7 @@
     "@preact/preset-vite": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
+    "csstype": "^3.0.10",
     "eslint": "^8.5.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-preact": "^1.3.0",
