--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "micromark-extension-frontmatter": "^1.0.0",
     "micromark-extension-gfm": "^2.0.0",
     "preact": "^10.5.13",
+    "preact-helmet": "^4.0.0-alpha-3",
     "preact-router": "^3.2.1"
   },
   "devDependencies": {
