--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "site",
+  "name": "oriverk.dev",
   "version": "1.2.2",
   "scripts": {
     "dev": "vite",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/oriverk/site.git"
+    "url": "git+https://github.com/oriverk/oriverk.dev.git"
   },
   "keywords": [
     "vite",
@@ -27,9 +27,9 @@
   "author": "oriverk",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/oriverk/site/issues"
+    "url": "https://github.com/oriverk/oriverk.dev/issues"
   },
-  "homepage": "https://github.com/oriverk/site#readme",
+  "homepage": "https://github.com/oriverk/oriverk.dev#readme",
   "dependencies": {
     "goober": "^2.1.0",
     "micromark": "^3.0.10",
