modify config tsconfig and eslint config files

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -46,5 +46,7 @@ rules: {
   ],
   'import/prefer-default-export': 0,
   'jest/no-deprecated-functions': 0,
-  '@typescript-eslint/ban-ts-comment': 0
+  '@typescript-eslint/ban-ts-comment': 0,
+  'react/require-default-props': 0,
+  'react/no-unused-prop-types': 0
 }
