--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview",
+    "start": "vite preview",
     "lint": "eslint {src,pages}/**/*",
     "fix": "run-s fix:eslint fix:prettier",
     "fix:md": "run-s fix:markdownlint fix:textlint",
@@ -62,6 +62,7 @@
     "textlint-rule-preset-ja-technical-writing": "^7.0.0",
     "textlint-rule-spellcheck-tech-word": "^5.0.0",
     "typescript": "^4.6.4",
-    "vite": "^2.9.8"
+    "vite": "^2.9.8",
+    "vite-plugin-static-copy": "^0.5.0"
   }
 }
