--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,12 @@
     "noEmit": true,
     "jsx": "preserve",
     "jsxFactory": "h",
-    "jsxFragmentFactory": "Fragment"
+    "jsxFragmentFactory": "Fragment",
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"],
+      "react": ["preact/compat"]
+    }
   },
   "include": ["src"]
 }
