migrate Preactjs to Reactjs

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,5 @@
 VITE_SITE_PATH=https://example.com
 VITE_BLOG_PATH=https://blog.example.com
+VITE_GITHUB_USER_ID=\w+
+VITE_TWITTER_USER_ID=\w+
 VITE_GITHUB_PATH=
