--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve",
-    "jsxFactory": "h",
-    "jsxFragmentFactory": "Fragment",
+    "jsx": "react-jsx",
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"],
-      "react": ["preact/compat"]
     }
   },
   "include": ["src"]
