--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,54 +1,30 @@
 env:
   browser: true
   es2021: true
-settings:
-  react:
-    pragma: h
-  import/resolver: {
-    'node': { 'extensions': ['.js', '.jsx', '.ts', '.tsx'] }
-  }
 extends:
   - plugin:react/recommended
   - airbnb
-  - plugin:import/errors
-  - plugin:import/warnings
-  - plugin:import/typescript
-  - plugin:@typescript-eslint/recommended
-  - plugin:@typescript-eslint/recommended-requiring-type-checking
-  - preact
   - prettier
 parser: '@typescript-eslint/parser'
 parserOptions:
-  project: './tsconfig.json'
   ecmaFeatures:
     jsx: true
-  ecmaVersion: 13
+  ecmaVersion: latest
   sourceType: module
 plugins:
   - react
   - '@typescript-eslint'
-  - import
-  - prettier
-ignorePatterns:
-  - vite.config.ts
 rules: {
-  'comma-dangle': 0,
-  'react/prop-types': 0,
+  'no-unused-vars': 1,
+  'import/extensions': 0,
+  'import/no-unresolved': 0,
+  'import/prefer-default-export': 0,
   'react/function-component-definition': 0,
+  'react/no-unused-prop-types': 0,
+  'react/require-default-props': 0,
+  'react/jsx-props-no-spreading': 0,
   'react/jsx-filename-extension': [
-    "error", 
+    1, 
     { "extensions": [".jsx", ".tsx"] }
   ],
-  'react/jsx-props-no-spreading': 0,
-  'import/no-unresolved': 0,
-  'import/extensions': [
-    "error",
-    "ignorePackages",
-    { "js": "never", "jsx": "never", "ts": "never", "tsx": "never" },
-  ],
-  'import/prefer-default-export': 0,
-  'jest/no-deprecated-functions': 0,
-  '@typescript-eslint/ban-ts-comment': 0,
-  'react/require-default-props': 0,
-  'react/no-unused-prop-types': 0
 }
