--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "start": "vite preview",
-    "lint": "eslint {src,pages}/**/*",
+    "lint": "run-p lint:*",
+    "lint:eslint": "eslint 'src/**/{*.ts,*.tsx}'",
     "fix": "run-s fix:eslint fix:prettier",
     "fix:md": "run-s fix:markdownlint fix:textlint",
-    "fix:eslint": "eslint --fix {src,pages}/**/*",
-    "fix:prettier": "prettier --write {src,pages}/**/*",
-    "fix:markdownlint": "markdownlint -f resume.md",
-    "fix:textlint": "textlint --fix resume.md",
+    "fix:eslint": "eslint --fix 'src/**/{*.ts,*.tsx}'",
+    "fix:prettier": "prettier --write 'src/**/{*.ts,*.tsx}'",
+    "fix:markdownlint": "markdownlint -f Resume.md",
+    "fix:textlint": "textlint --fix Resume.md",
     "prepare": "husky install"
   },
   "repository": {
@@ -35,23 +36,24 @@
     "micromark": "^3.0.10",
     "micromark-extension-frontmatter": "^1.0.0",
     "micromark-extension-gfm": "^2.0.1",
-    "preact": "^10.7.2",
-    "preact-helmet": "^4.0.0-alpha-3",
-    "preact-router": "^4.0.1"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-helmet-async": "^1.3.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@preact/preset-vite": "^2.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "@typescript-eslint/parser": "^5.22.0",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "@vitejs/plugin-react": "^1.3.2",
     "csstype": "^3.0.11",
-    "eslint": "^8.15.0",
+    "eslint": "^8.16.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-preact": "^1.3.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "husky": "^7.0.4",
     "markdownlint-cli": "^0.31.1",
