--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -15,6 +15,7 @@ plugins:
   - react
   - '@typescript-eslint'
 rules: {
+  'arrow-body-style': 1,
   'no-unused-vars': 1,
   'import/extensions': 0,
   'import/no-unresolved': 0,
