modify config files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "baseUrl": "./",
-    "paths": {
-      "@/*": ["src/*"],
-    }
+    "paths": {}
   },
   "include": ["src"]
 }
