--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "textlint-rule-preset-ja-technical-writing": "^7.0.0",
     "textlint-rule-spellcheck-tech-word": "^5.0.0",
     "typescript": "^4.6.4",
-    "vite": "^2.9.8",
-    "vite-plugin-static-copy": "^0.5.0"
+    "vite": "^2.9.8"
   }
 }
