--- a/.env.local.example
+++ b/.env.local.example
@@ -2,4 +2,5 @@ VITE_SITE_PATH=https://example.com
 VITE_BLOG_PATH=https://blog.example.com
 VITE_GITHUB_USER_ID=\w+
 VITE_TWITTER_USER_ID=\w+
-VITE_GITHUB_PATH=
+VITE_GITHUB_PATH=\w+
+VITE_GITHUB_PERSONAL_ACCESS_TOKEN=ghp_\w+
