--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "fix:prettier": "prettier --write 'src/**/{*.ts,*.tsx}'",
     "fix:markdownlint": "markdownlint -f README.md",
     "fix:textlint": "textlint --fix README.md",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "repository": {
     "type": "git",
@@ -32,7 +33,13 @@
   },
   "homepage": "https://github.com/oriverk/oriverk.dev#readme",
   "dependencies": {
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/typescript-graphql-request": "^4.4.9",
+    "github-calendar": "^2.2.9",
     "goober": "^2.1.9",
+    "graphql": "^16.5.0",
+    "graphql-request": "^4.3.0",
+    "graphql-tag": "^2.12.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet-async": "^1.3.0",
@@ -40,6 +47,10 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/typescript": "2.5.0",
+    "@graphql-codegen/typescript-operations": "2.4.1",
+    "@octokit/graphql-schema": "^10.73.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
