--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/typescript-graphql-request": "^4.4.9",
+    "date-fns": "^2.28.0",
     "github-calendar": "^2.2.9",
     "goober": "^2.1.9",
     "graphql": "^16.5.0",
