--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
     "lint": "run-p lint:*",
     "lint:eslint": "eslint 'src/**/{*.ts,*.tsx}'",
     "fix": "run-s fix:eslint fix:prettier",
-    "fix:md": "run-s fix:markdownlint fix:textlint",
     "fix:eslint": "eslint --fix 'src/**/{*.ts,*.tsx}'",
     "fix:prettier": "prettier --write 'src/**/{*.ts,*.tsx}'",
-    "fix:markdownlint": "markdownlint -f README.md",
-    "fix:textlint": "textlint --fix README.md",
     "prepare": "husky install"
   },
   "repository": {
@@ -21,7 +18,7 @@
   },
   "keywords": [
     "vite",
-    "preact",
+    "react",
     "typescript",
     "goober"
   ],
@@ -32,36 +29,31 @@
   },
   "homepage": "https://github.com/oriverk/oriverk.dev#readme",
   "dependencies": {
-    "goober": "^2.1.9",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "goober": "^2.1.13",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-router-dom": "^6.3.0",
-    "swr": "^1.3.0"
+    "react-router-dom": "^6.10.0",
+    "swr": "^2.1.5"
   },
   "devDependencies": {
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "@typescript-eslint/parser": "^5.25.0",
-    "@vitejs/plugin-react": "^1.3.2",
-    "csstype": "^3.0.11",
-    "eslint": "^8.16.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "@vitejs/plugin-react": "^4.0.0",
+    "csstype": "^3.1.2",
+    "eslint": "^8.39.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "husky": "^7.0.4",
-    "markdownlint-cli": "^0.31.1",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.6.2",
-    "textlint": "^12.1.1",
-    "textlint-rule-preset-ja-spacing": "^2.2.0",
-    "textlint-rule-preset-ja-technical-writing": "^7.0.0",
-    "textlint-rule-spellcheck-tech-word": "^5.0.0",
-    "typescript": "^4.6.4",
-    "vite": "^2.9.8"
+    "prettier": "^2.8.8",
+    "typescript": "^5.0.4",
+    "vite": "^4.3.3"
   }
 }
